--- a/orarend.html
+++ b/orarend.html
@@ -17,20 +17,21 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="emberek.html">Osztálytársaink</a>
+                        <a class="navbar" href="emberek.html">Osztálytársaink</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="galeria.html">Galéria</a>
+                        <a class="navbar" href="galeria.html">Galéria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="orarend.html">Órarend</a>
+                        <a class="navbar" href="orarend.html">Órarend</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    
+    <br>
     <div class="container mt-5">
+        <div class="table-responsive">
         <table class="table table-bordered">
             <thead class="text-white">
                 <tr>
@@ -43,97 +44,130 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- 0th hour -->
                 <tr>
                     <td>0.</td>
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
+                    <td>Testnevelés</td>
                     <td></td>
                 </tr>
-                <!-- 1st hour -->
                 <tr>
                     <td>1.</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>IKT(2.csoport)</td>
+                    <td>Prog. alap (2.csoport)</td>
+                    <td>
+                            Matematika(1.)
+                            <br>
+                            Nyelvtan(2.)
+                    </td>
+                    <td>Testnevelés</td>
+                    <td>Történelem</td>
                 </tr>
-                <!-- 2nd hour -->
                 <tr>
                     <td>2.</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Komplex Természet Tudomány</td>
+                    <td>
+                            Angol(1.)
+                            <br>
+                            Prog. alap(2.)
+                    </td>
+                    <td>Történelem</td>
+                    <td>Osztályfőnöki</td>
+                    <td>
+                            Digitális Kúltúra(1.)
+                            <br>
+                            IKT(2.)
+                    </td>
                 </tr>
-                <!-- 3rd hour -->
                 <tr>
                     <td>3.</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Történelem</td>
+                    <td>
+                            IKT(1.)
+                            <br>
+                            Digitális Kúltúra(2.)
+                    </td>
+                    <td>Irodalom</td>
+                    <td>
+                            Angol(1.)
+                            <br>
+                            Matematika(2.)
+                    </td>
+                    <td>
+                            Digitális Kúltúra(1.)
+                            <br>
+                            ITAL(2.)
+                    </td>
                 </tr>
-                <!-- 4th hour -->
                 <tr>
                     <td>4.</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Irodalom</td>
+                    <td>
+                            Nyelvtan(1.)
+                            <br>
+                            Digitális Kúltúra(2.)
+                    </td>
+                    <td>Angol</td>
+                    <td>Matematika</td>
+                    <td>ITAL</td>
                 </tr>
-                <!-- 5th hour -->
                 <tr>
                     <td>5.</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Testnevelés</td>
+                    <td>Irodalom</td>
+                    <td>Testnevelés</td>
+                    <td>Infós Matek</td>
+                    <td>ITAL</td>
                 </tr>
-                <!-- 6th hour -->
                 <tr>
                     <td>6.</td>
+                    <td>
+                            Nyelvtan(1.)
+                            <br>
+                            Angol(2.)
+                    </td>
+                    <td>Matematika</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Prog. alap(1.csoport)</td>
+                    <td>
+                            ITAL(1.)
+                            <br>
+                            Matematika(2.)
+                    </td>
                 </tr>
-                <!-- 7th hour -->
                 <tr>
                     <td>7.</td>
+                    <td>Angol</td>
+                    <td>
+                            Matematika(1.)
+                            <br>
+                            Angol(2.)
+                    </td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Prog. alap(1.csoport)</td>
+                    <td>
+                            ITAL(1.)
+                            <br>
+                            Nyelvtan(2.)
+                    </td>
                 </tr>
-                <!-- 8th hour -->
                 <tr>
                     <td>8.</td>
+                    <td>Komplex Természet Tudomány</td>
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Komplex Természet Tudomány</td>
                 </tr>
             </tbody>
         </table>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.min.js"></script>
-    <script>
-        baguetteBox.run('.lightbox');
-    </script>
 </body>
 </html>
