--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <br>
         <div class="row">
             <div class="col-md-12 col-12 col-lg-6">
-                <a href="img/index/erettsegi.jpg"  data-caption="Éretségi Kép" class="lightbox">
+                <a href="img/index/erettsegi.jpg"  data-caption="Érettségi Kép" class="lightbox">
                     <img src="img/index/erettsegi.jpg" height="332" class="card-img-top" alt="...">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
-                        <h2 class="card-title">Éretségi Heti Órarend</h2>
+                        <h2 class="card-title">Érettségi Heti Órarend</h2>
                         <p class="card-text">Jövő héten érettségik miatt:</p>
                         <p class="card-text">Hétfőn (május.6.) és csütörtökön (május 9.) nincs tanítás</p>
                         <p class="card-text">Kedden (május.7.) és szerdán (május 8.) délutáni tanítás van 13:00-tól rövidítve tartjuk az 1-4. órákat.</p>
