--- a/emberek.html
+++ b/emberek.html
@@ -94,7 +94,7 @@
                   </p>
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
+                  <p class="card-text">"Ha meglövöm felrobban?🧨"</p>
                 </div>
               </div>
             </div>
