--- a/index.html
+++ b/index.html
@@ -39,6 +39,45 @@
         <br>
         <div class="row">
             <div class="col-md-12 col-12 col-lg-6">
+                <a href="img/index/deszkatemplom.jpg"  data-caption="A miskolci református deszkatemplom" class="lightbox">
+                    <img src="img/index/deszkatemplom.jpg" class="card-img-top" alt="...">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Közösségi szolgálat a Deszkatemplomnál!</h2>
+                        <p class="card-text">A szervezők játszóteret szeretnének kialakítani a miskolci Deszkatemplom mellett lévő gyülekezeti ház udvarán.</p> 
+                        <p class="card-text">Ehhez a munkához várják a középiskolás segítőket, akik közösségi szolgálatos órákat kapnak a munkáért.</p>
+                        <p class="card-text">Alkalmanként 4-5 fő segítőre lenne szükség.</p>
+                        <div id="fullText" style="display: none;">
+                            <table class="table-bordered">
+                                <thead>
+                                    <tr>
+                                        <td>Időpontok:</td>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>május 24-én (pénteken) 14-18 óra</td> 
+                                    </tr>
+                                    <tr>
+                                        <td>május 25-én  (szombaton) 9-13 óra</td>
+                                    </tr>
+                                    <tr>
+                                        <td>június 1-jén (szombaton) 9-13 óra</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <p></p>
+                            <p class="card-text">Az érdeklődők jelentkezhetnek itt, a bejegyzés alatti kommentben (írjátok le, melyik nap lenne alkalmas, de akár mindhárom napra is lehet jelentkezni) vagy személyesen az iskolában Óvári Enikő tanárnőnél. Jelentkezési határidő 2024. május 23., csütörtök 12:00 óra!
+                                Amennyiben esne az eső, a szervezők zárt helyen elvégzendő feladatot, munkát adnak az önkénteseknek, tehát rossz idő estén is érdemes jelentkezni!</p>
+                            <p class="card-text">Éljetek ezzel a lehetőséggel. jelentkezzetek a programra!</p>
+                            <p class="card-text"><small class="datum">Publikálva: 2024.05.02.</small></p>
+                        </div>
+                        <button onclick="toggleText()">Többi</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/erettsegi.jpg"  data-caption="Érettségi Kép" class="lightbox">
                     <img src="img/index/erettsegi.jpg" height="332" class="card-img-top" alt="...">
                 </a>
@@ -113,6 +152,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.min.js"></script>
     <script>
         baguetteBox.run('.lightbox');
+
+        function toggleText() {
+            var fullText = document.getElementById("fullText");
+            if (fullText.style.display === "none") {
+                fullText.style.display = "block";
+            } else {
+                fullText.style.display = "none";
+            }
+        }
     </script>
 </body>
 </html>
