--- a/emberek.html
+++ b/emberek.html
@@ -270,7 +270,7 @@
                   </p>
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
+                  <p class="card-text">"Azért nem vettél észre, mert nem nézel a lábad alá!"</p>
                 </div>
               </div>
             </div>
@@ -556,7 +556,7 @@
                   </p>
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">"Könnyeb meglátni másban a szálkát mint önmagadban a gerendát"</p>
+                  <p class="card-text">"Könnyeb meglátni másban a szálkát mint magadban a gerendát"</p>
                 </div>
               </div>
             </div>
