--- a/emberek.html
+++ b/emberek.html
@@ -50,7 +50,7 @@
                   </p>
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text"></p>
+                  <p class="card-text">""</p>
                 </div>
               </div>
             </div>
@@ -768,6 +768,15 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+      <br>
+      <div class="container mt-3">
+        <div class="row">
+            <div class="col text-center">
+                <a href="regitarsak.html" class="btn gomb feher">Régi Osztálytársaink</a>
+            </div>
+        </div>
+    </div>
+    <br>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
