--- a/orarend.html
+++ b/orarend.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.min.css">
     <link rel="stylesheet" href="css/orarend.css">
+    <link rel="stylesheet" href="css/fotok.css">
     <title>Órarend</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <div class="container">
-            <a class="navbar-brand" href="index.html">9.A</a>
+            <a class="navbar-brand" href="index.html">10.A</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,6 +32,21 @@
     </nav>
     <br>
     <div class="container mt-5">
+        <div class="row">
+            <div class="col mx-6 p-4 hobbi rounded">
+                <a href="img/Galeria/orarend.jpg" data-caption="Órarend" class="lightbox">
+                    <div class="card" style="width: 80%; margin:auto">
+                        <img src="img/Galeria/orarend.jpg" alt="">
+                        <div class="card-body">
+                            <p class="card-text h5 fw-bold text-center">Órarend</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    
+    <div class="container mt-5">
         <div class="table-responsive">
         <table class="table table-bordered">
             <thead class="text-white">
@@ -46,47 +62,55 @@
             <tbody>
                 <tr>
                     <td>0.</td>
-                    <td></td>
-                    <td></td>
+                    <td>IKT(1.csoport)
+                        <br>
+                        Prog. Alap(2.csoport)
+                    </td>
                     <td></td>
                     <td>Testnevelés</td>
+                    <td>Ital(1.csoport)</td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>1.</td>
-                    <td>IKT(2.csoport)</td>
-                    <td>Prog. alap (2.csoport)</td>
-                    <td>
-                            Matematika(1.)
-                            <br>
-                            Nyelvtan(2.)
+                    <td>IKT(1.csoport)
+                        <br>
+                        Prog. Alap(2.csoport)
                     </td>
+                    <td>Prog. alap (1.csoport)</td>
                     <td>Testnevelés</td>
-                    <td>Történelem</td>
+                    <td>Ital(1.csoport)</td>
+                    <td>Ital(2.csoport)</td>
                 </tr>
                 <tr>
                     <td>2.</td>
-                    <td>Komplex Természet Tudomány</td>
+                    <td>Fizika</td>
                     <td>
-                            Angol(1.)
-                            <br>
-                            Prog. alap(2.)
-                    </td>
-                    <td>Történelem</td>
-                    <td>Osztályfőnöki</td>
-                    <td>
-                            Digitális Kúltúra(1.)
+                            Prog. alap(1.)
                             <br>
                             IKT(2.)
+                    </td>
+                    <td>Történelem</td>
+                    <td>ITAL(1.csoport)
+                        <br>
+                        Matek(2.csoport)
+                    </td>
+                    <td>
+                            Matek(1.)
+                            <br>
+                            Ital(2.)
                     </td>
                 </tr>
                 <tr>
                     <td>3.</td>
-                    <td>Történelem</td>
+                    <td>Matek(1.csoport)
+                        <br>
+                        IKT(2.csoport)
+                    </td>
                     <td>
-                            IKT(1.)
+                            Matek(1.)
                             <br>
-                            Digitális Kúltúra(2.)
+                            IKT(2.)
                     </td>
                     <td>Irodalom</td>
                     <td>
