--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
         <br>
         <div class="row">
             <div class="col-md-12 col-12 col-lg-6">
+                <a href="img/index/oraahelyen.jpg"  data-caption="Érettségi Kép" class="lightbox">
+                    <img src="img/index/oraahelyen.jpg" height="322" class="card-img-top" alt="...">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Helyén az óra!</h2>
+                        <p class="card-text">Osztálytermünkben végre fél év után helyére került az általunk készített digitális óra</p>
+                        <p class="card-text">Az órát készítette: <b>Balázs Botond,Biró Levente,Fodor Levente,Homolya Nándor, Kuruzc Gergő</b>.</p>
+                        <p class="card-text">Az óra felrakásában segédkezett Sike László osztályfőnök úr és Sándor Péter tanár úr</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2024.09.04.</small></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/deszkatemplom.jpg"  data-caption="A miskolci református deszkatemplom" class="lightbox">
                     <img src="img/index/deszkatemplom.jpg" class="card-img-top" alt="...">
                 </a>
