--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <br>
         <div class="row">
             <div class="col-md-12 col-12 col-lg-6">
-                <a href="img/index/oraahelyen.jpg"  data-caption="Érettségi Kép" class="lightbox">
+                <a href="img/index/oraahelyen.jpg"  data-caption="A helyén léve óra" class="lightbox">
                     <img src="img/index/oraahelyen.jpg" height="322" class="card-img-top" alt="...">
                 </a>
                 <div class="card mb-3">
