--- a/fotok.html
+++ b/fotok.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="css/fotok.css">
+    <link rel="stylesheet" href="css/telifotok.css">
     <title>Fotók</title>
 </head>
 <body>
@@ -44,6 +44,16 @@
 
     <div class="container mt-5">
         <div class="row">
+            <div class="col mx-6 p-4 hobbi rounded">
+                <a href="img/Galeria/túraképsz1.jpg" data-caption="Túrai csoportkép" class="lightbox">
+                    <div class="card" style="width: 80%; margin:auto">
+                        <img src="img/Galeria/túraképsz2.jpg" alt="">
+                        <div class="card-body">
+                            <p class="card-text h5 fw-bold text-center">Túrai csoportkép</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <div class="col mx-6 p-4 hobbi rounded">
                 <a href="img/Galeria/azelsonyolcas.JPG" data-caption="Az első nyolcas" class="lightbox">
                     <div class="card" style="width: 80%; margin:auto">
