--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/telindex.css">
     <title>Főoldal</title>
 </head>
 <body>
@@ -39,22 +39,59 @@
         <br>
         <div class="row">
             <div class="col-md-12 col-12 col-lg-6">
-                <a href="img/index/oraahelyen.jpg"  data-caption="A helyén léve óra" class="lightbox">
+                <a href="img/index/fogaszat.jpg" class="lightbox">
+                    <img src="img/index/fogaszat.jpg" height="330" class="card-img-top" alt="...">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Októberi tudnivalók!</h2>
+                        <p class="card-text">Október 15. fogászati szűrés az orvosi szobában 9:00-tól (hirdetik a sorrendet)</p>
+                        <p class="card-text">Október 22. öltöny, mozilátogatás</p>
+                        <p class="card-text">Október 23. munkaszüneti nap</p>
+                        <p class="card-text">Október 26- november 3. Őszi Szünet</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2024.010.010.</small></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-12 col-lg-6">
+                <a href="img/index/infó.jpg" class="lightbox">
+                    <img src="img/index/infó.jpg" class="card-img-top" alt="...">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Aktuális információk!</h2>
+                        <p class="card-text">A közeledő túránkhoz és a közelgő eseményekhez némi információ:</p> 
+                        <ul>
+                            <li>Október 22-én mozi 1400 Ft/ főre várható, ezt majd jelzem, ha be kell hozni.</li>
+                            <li>A jövő heti túra jelen állás szerint fejenként 6000 Ft + 4 Euró (még van 6 szabad hely) A Forint részt a jövő héten csütörtökig kérem, az Eurót mindenki hozza magával.</li>
+                        </ul>
+                        <div id="fullText" style="display: none;">
+                            <ul>
+                                <li>A telefonleadás egyszerűsítése érdekében az iskola zárható telefontároló szekrényt szerezne be, ahol mindenkinek saját rekesze lenne (osztályonként zárható) Ennek költsége 1300 Ft/fő. Javaslom, hogy ezt ne külön hozzuk be, hanem az osztálypénzből fedezzük.</li>
+                            </ul>
+                        </div>
+                        <button onclick="toggleText()">Többi</button>
+                        <p class="card-text"><small class="datum">Publikálva: 2024.09.18.</small></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-12 col-lg-6">
+                <a href="img/index/oraahelyen.jpg"  data-caption="A helyén lévő óra" class="lightbox">
                     <img src="img/index/oraahelyen.jpg" height="322" class="card-img-top" alt="...">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
                         <h2 class="card-title">Helyén az óra!</h2>
-                        <p class="card-text">Osztálytermünkben végre fél év után helyére került az általunk készített digitális óra</p>
+                        <p class="card-text">Osztálytermünkben végre fél év után helyére került az általunk készített digitális óra!</p>
                         <p class="card-text">Az órát készítette: <b>Balázs Botond,Biró Levente,Fodor Levente,Homolya Nándor, Kuruzc Gergő</b>.</p>
-                        <p class="card-text">Az óra felrakásában segédkezett Sike László osztályfőnök úr és Sándor Péter tanár úr</p>
+                        <p class="card-text">Az óra felrakásában segédkezett Sike László osztályfőnök úr és Sándor Péter tanár úr.</p>
                         <p class="card-text"><small class="datum">Publikálva: 2024.09.04.</small></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/deszkatemplom.jpg"  data-caption="A miskolci református deszkatemplom" class="lightbox">
-                    <img src="img/index/deszkatemplom.jpg" class="card-img-top" alt="...">
+                    <img src="img/index/deszkatemplom.jpg" height="277" class="card-img-top" alt="...">
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
@@ -85,9 +122,9 @@
                             <p class="card-text">Az érdeklődők jelentkezhetnek itt, a bejegyzés alatti kommentben (írjátok le, melyik nap lenne alkalmas, de akár mindhárom napra is lehet jelentkezni) vagy személyesen az iskolában Óvári Enikő tanárnőnél. Jelentkezési határidő 2024. május 23., csütörtök 12:00 óra!
                                 Amennyiben esne az eső, a szervezők zárt helyen elvégzendő feladatot, munkát adnak az önkénteseknek, tehát rossz idő estén is érdemes jelentkezni!</p>
                             <p class="card-text">Éljetek ezzel a lehetőséggel. jelentkezzetek a programra!</p>
-                            <p class="card-text"><small class="datum">Publikálva: 2024.05.22.</small></p>
                         </div>
                         <button onclick="toggleText()">Többi</button>
+                        <p class="card-text"><small class="datum">Publikálva: 2024.05.22.</small></p>
                     </div>
                 </div>
             </div>
