--- a/orarend.html
+++ b/orarend.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="css/orarend.css">
-    <link rel="stylesheet" href="css/fotok.css">
+    <link rel="stylesheet" href="css/teliorarend.css">
+    <link rel="stylesheet" href="css/telifotok.css">
     <title>Órarend</title>
 </head>
 <body>
@@ -31,20 +31,6 @@
         </div>
     </nav>
     <br>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col mx-6 p-4 hobbi rounded">
-                <a href="img/Galeria/orarend.jpg" data-caption="Órarend" class="lightbox">
-                    <div class="card" style="width: 80%; margin:auto">
-                        <img src="img/Galeria/orarend.jpg" alt="">
-                        <div class="card-body">
-                            <p class="card-text h5 fw-bold text-center">Órarend</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
     
     <div class="container mt-5">
         <div class="table-responsive">
@@ -64,7 +50,7 @@
                     <td>0.</td>
                     <td>IKT(1.csoport)
                         <br>
-                        Prog. Alap(2.csoport)
+                        Programozási Alapismeretek(2.csoport)
                     </td>
                     <td></td>
                     <td>Testnevelés</td>
@@ -75,9 +61,9 @@
                     <td>1.</td>
                     <td>IKT(1.csoport)
                         <br>
-                        Prog. Alap(2.csoport)
+                        Programozási Alapismeretek(2.csoport)
                     </td>
-                    <td>Prog. alap (1.csoport)</td>
+                    <td>Programozási Alapismeretek (1.csoport)</td>
                     <td>Testnevelés</td>
                     <td>Ital(1.csoport)</td>
                     <td>Ital(2.csoport)</td>
@@ -86,9 +72,9 @@
                     <td>2.</td>
                     <td>Fizika</td>
                     <td>
-                            Prog. alap(1.)
+                            Programozási Alapismeretek(1.csoport)
                             <br>
-                            IKT(2.)
+                            IKT(2.csoport)
                     </td>
                     <td>Történelem</td>
                     <td>ITAL(1.csoport)
@@ -96,93 +82,81 @@
                         Matek(2.csoport)
                     </td>
                     <td>
-                            Matek(1.)
+                            Matematika(1.csoport)
                             <br>
-                            Ital(2.)
+                            ITAL(2.csoport)
                     </td>
                 </tr>
                 <tr>
                     <td>3.</td>
-                    <td>Matek(1.csoport)
+                    <td>Matematika(1.csoport)
                         <br>
                         IKT(2.csoport)
                     </td>
                     <td>
-                            Matek(1.)
+                            Matematika(1.csoport)
                             <br>
-                            IKT(2.)
+                            IKT(2.csoport)
                     </td>
                     <td>Irodalom</td>
                     <td>
-                            Angol(1.)
+                            Angol nyelv(1.csoport)
                             <br>
-                            Matematika(2.)
+                            Matematika(2.csoport)
                     </td>
                     <td>
-                            Digitális Kúltúra(1.)
+                            Matek(1.csoport)
                             <br>
-                            ITAL(2.)
+                            ITAL(2.csoport)
                     </td>
                 </tr>
                 <tr>
                     <td>4.</td>
-                    <td>Irodalom</td>
+                    <td>Angol nyelv</td>
                     <td>
-                            Nyelvtan(1.)
+                            Matematika(1.csoport)
                             <br>
-                            Digitális Kúltúra(2.)
+                            Angol nyelv(2.csoport)
                     </td>
-                    <td>Angol</td>
-                    <td>Matematika</td>
-                    <td>ITAL</td>
+                    <td>Angol nyelv</td>
+                    <td>Fizika</td>
+                    <td>Irodalom</td>
                 </tr>
                 <tr>
                     <td>5.</td>
+                    <td>Történelem</td>
                     <td>Testnevelés</td>
+                    <td>ITAL</td>
                     <td>Irodalom</td>
                     <td>Testnevelés</td>
-                    <td>Infós Matek</td>
-                    <td>ITAL</td>
                 </tr>
                 <tr>
                     <td>6.</td>
+                    <td>Irodalom</td>
+                    <td>Pénzügyi ismeretek</td>
+                    <td>Matematika(2.csoport)</td>
+                    <td>Angol nyelv</td>
                     <td>
-                            Nyelvtan(1.)
+                            IKT(1.csoport)
                             <br>
-                            Angol(2.)
-                    </td>
-                    <td>Matematika</td>
-                    <td></td>
-                    <td>Prog. alap(1.csoport)</td>
-                    <td>
-                            ITAL(1.)
-                            <br>
-                            Matematika(2.)
+                            Matematika(2.csoport)
                     </td>
                 </tr>
                 <tr>
                     <td>7.</td>
-                    <td>Angol</td>
-                    <td>
-                            Matematika(1.)
-                            <br>
-                            Angol(2.)
-                    </td>
                     <td></td>
-                    <td>Prog. alap(1.csoport)</td>
-                    <td>
-                            ITAL(1.)
-                            <br>
-                            Nyelvtan(2.)
-                    </td>
+                    <td>Irodalom</td>
+                    <td>Matematika(2.csoport)</td>
+                    <td>Osztályfőnöki</td>
+                    <td>Angol</td>
                 </tr>
                 <tr>
                     <td>8.</td>
-                    <td>Komplex Természet Tudomány</td>
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td>Komplex Természet Tudomány</td>
+                    <td></td>
+                    <td>Történelem</td>
                 </tr>
             </tbody>
         </table>
