Kandó-Ferenci Bál

--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
         <div class="row">
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/fogaszat.jpg" class="lightbox">
+                    <img src="img/index/kandobal.jpg" height="285" class="card-img-top" alt="...">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Kandó-Ferenci Bál</h2>
+                        <p class="card-text">A Ferenczi-Kandó Bál 2025-ben ismét megrendezésre kerül! Ez az év legnagyobb diákrendezvénye, ahol együtt ünnepelhetünk, táncolhatunk és építhetünk új kapcsolatokat.</p>
+                        <p class="card-text">Időpont: 2025. február 28. 19:00</p>
+                        <p class="card-text">Dress code: Öltöny / Alkalmi ruha</p>
+                        <p class="card-text">Elérhetőség: <a class="linkek" href="https://ferenczi.kandobal.hu" target="_blank">https://ferenczi.kandobal.hu</a> vagy a 
+                            kapcsolat@kandobal.hu email címen</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2025.02.013.</small></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 col-12 col-lg-6">
+                <a href="img/index/fogaszat.jpg" class="lightbox">
                     <img src="img/index/fogaszat.jpg" height="330" class="card-img-top" alt="...">
                 </a>
                 <div class="card mb-3">
