--- a/galeria.html
+++ b/galeria.html
@@ -103,6 +103,16 @@
             </div>
         </div>
     </div>
+    <div class="col mx-6 p-4 hobbi rounded">
+        <div class="card" style="width: 80%; margin:auto">
+            <video controls>
+                <source src="img/Galeria/Nehaljmeg.mp4" type="video/mp4">              
+            </video>
+            <div class="card-body">
+                <p class="card-text h5 fw-bold text-center">Akkor ne halj meg légyszives</p>
+            </div>
+        </div>
+    </div>
   </div>
   </div>
 
